# random_cat_sticker_bot

bot/: pyproject.toml
bot/bot/: start.py
