[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["ni.vasilev <mailto:ni.vasilev@andersenlab.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyTelegramBotAPI = "^4.7.1"
python-decouple = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "bot.start:main"
